# faiss-server

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md
cmake/: c-ares.cmake  faiss.cmake  grpc-functions.cmake  grpc.cmake  proto-functions.cmake  protobuf.cmake  zlib.cmake
example/: faiss_client.py  get_corpus.py  indexing.py  main.py  requirements.txt  search.py  train.py
example/client/: healthcheck.py  search.py  search_by_id.py
example/indexing/: indexing.py  search.py
protobuf/: faiss.proto
python/: faiss_pb2.py  faiss_pb2_grpc.py
src/: CMakeLists.txt  add.cpp  faiss-example.cpp  faiss_server.cpp  faiss_server.h  greeter_client.cpp  greeter_server.cpp  main.cpp  search.cpp  service_impl.cpp  service_impl.h
src/protobuf/: faiss.grpc.pb.cc  faiss.grpc.pb.h  faiss.pb.cc  faiss.pb.h
